@@ -10,4 +10,5 @@ t/freeze.t                  Test memory store (freeze/thaw) operations
 t/retrieve.t                Test retrieve operation
 t/store.t                   Test store operation
 t/forgive.t                 Test if $Storable::forgive_me works
+t/tied.t                    Test serialization of tied SVs.
 ChangeLog                   Changes since baseline
