@@ -112,5 +112,6 @@ Thanks to:
 
 	Jarkko Hietaniemi <jhi@iki.fi>
 	Ulrich Pfeifer <pfeifer@charly.informatik.uni-dortmund.de>
+	Benjamin A. Holzman <benjamin.a.holzman@bender.com>
 
 for their contributions.
